--- a/index.html
+++ b/index.html
@@ -14,24 +14,38 @@
 
 <body>
     <header class="conteiner">
-        <img src="img/WIN_20250701_09_46_58_Pro.jpg" alt="avatar do Cauã" srcset""
-        class="rounded-circle">
+        <img src="img/WIN_20250701_09_46_58_Pro.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
         <p>eu sou técnico de sistemas Cauã</p>
         <h1>eu estudo programação front-end e mobile</h1>
         <p>sigo em busca de conhecer melhor essa area de desenvolvedor de sistemas e me desenvolvo no
             ensino medio do Gabriel de Lara para oportunidades de trabalhos futuros</p>
-    <p>minhas habilidades</p>
-    <div>
-        <p>Página web:html e css</p>
-        <p>HTML5 E CSS3:listas em navegação e tabelas</p>
-        <p>HTML E CSS: formulários e tabelas</p>
-    </div>
+        <p>minhas habilidades</p>
+        <div>
+              <p class="badge bg-secondary">Página web: HTML e CSS</p>
+            <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
+            <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
+        </div>
     </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+     <main class="container">
+        <h2>Meus projetos</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/barbeariaalura.jpg" alt="Foto da página inicial da Barbearia Alura">
+                    <div class="card-body">
+                        <h5 class="card-title">Desenvolvendo uma pagina em HTML e CSS - BARBEARIA ALURA</h5>
+                        <p class="card-text">
+                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS. Foi criada um website com o tema Barbearia Alura, onde temos um menu que acessa a página de produtos e contato.
+                        </p>
+                        <a href="https://cauasakaue.github.io/barbearia-alura/" class="btn btn-primary">Acesse a página</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
