--- a/index.html
+++ b/index.html
@@ -21,13 +21,23 @@
             ensino medio do Gabriel de Lara para oportunidades de trabalhos futuros</p>
         <p>minhas habilidades</p>
         <div>
-              <p class="badge bg-secondary">Página web: HTML e CSS</p>
+            <a href="doc/Certificado - Alura - html e css parte 1.pdf"></a>
+
+            <p class="badge bg-secondary">Página web: HTML e CSS</p>
+            <a href="doc/Certificado - Alura -  html e css parte 2.pdf"></a>
+
             <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
-            <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
+            <a href="doc/Certificado - Alura -  html e css parte 3.pdf"></a>
+
+            <a href="doc/Certificado - Alura -  html e css parte 4.pdf">
+                <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
+            </a>
+
+
         </div>
     </header>
 
-     <main class="container">
+    <main class="container">
         <h2>Meus projetos</h2>
         <div class="row">
             <div class="col-md-4">
@@ -36,16 +46,21 @@
                     <div class="card-body">
                         <h5 class="card-title">Desenvolvendo uma pagina em HTML e CSS - BARBEARIA ALURA</h5>
                         <p class="card-text">
-                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS. Foi criada um website com o tema Barbearia Alura, onde temos um menu que acessa a página de produtos e contato.
+                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS.
+                            Foi criada um website com o tema Barbearia Alura, onde temos um menu que acessa a página de
+                            produtos e contato.
                         </p>
-                        <a href="https://cauasakaue.github.io/barbearia-alura/" class="btn btn-primary">Acesse a página</a>
+                        <a href="https://cauasakaue.github.io/barbearia-alura/" class="btn btn-primary">Acesse a
+                            página</a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
