--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             ensino medio do Gabriel de Lara para oportunidades de trabalhos futuros</p>
         <p>minhas habilidades</p>
         <div>
-            <a href="doc/Certificado - Alura - html e css parte 1.pdf"></a>
+            <a href="doc/Certificado - Alura - html e css parte 1.pdf" target="_blank"></a>
 
             <p class="badge bg-secondary">Página web: HTML e CSS</p>
-            <a href="doc/Certificado - Alura -  html e css parte 2.pdf"></a>
+            <a href="doc/Certificado - Alura -  html e css parte 2.pdf" target="_blank"></a>
 
             <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
-            <a href="doc/Certificado - Alura -  html e css parte 3.pdf"></a>
+            <a href="doc/Certificado - Alura -  html e css parte 3.pdf" target="_blank">
 
-            <a href="doc/Certificado - Alura -  html e css parte 4.pdf">
+            <a href="doc/Certificado - Alura -  html e css parte 4.pdf" target="_blank">
                 <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
             </a>
 
