--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
             </div>
         </div>
     </main>
+    <footer class="conteiner py-5">
+<h2>Entre em contato</h2>
+<div>
+     <a href="https://github.dev/cauasakaue">github</a>
+</div>
+<p class="my-5 text-center">&copy;copyright 2025.
+    produzido por Cauã Yuri Sakaue
+</p>
+
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
