--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     </header>
 
     <main class="container">
+         <div class="col-md-4">
+            
+         </div>
         <h2>Meus projetos</h2>
         <div class="row">
+
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
                     <img src="img/barbeariaalura.jpg" alt="Foto da página inicial da Barbearia Alura">
