--- a/git.html
+++ b/git.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
 </head>
+
 <body>
 
     <h1>Teste de GIT e GITHUB</h1>
@@ -12,8 +14,10 @@
     <p>Como fazer Comit e enviar ao github?</p>
     <p>para clonar repositório: git clone 'link do repositorio'</p>
 
-    <p>1. Verificar se sua conta está vinculda ao GIT: para listar as congfigurações do GIT: git config --global --list</p>
-    <p>2. Se não for seu usuario e email:  configurar usando git config --global user.name "SeuNome" configurar usando git config --global user.email "seu.email@escola.pr.gov.br" </p>
+    <p>1. Verificar se sua conta está vinculda ao GIT: para listar as congfigurações do GIT: git config --global --list
+    </p>
+    <p>2. Se não for seu usuario e email: configurar usando git config --global user.name "SeuNome" configurar usando
+        git config --global user.email "seu.email@escola.pr.gov.br" </p>
     <p>3. Não esquecer que na 1ª vez irá pedir autorização do github.</p>
     <p>4. Salvar o arquivo que está escrevendo.</p>
     <p>5. Comando para criar o arquivo: git add nomeDoArquivo</p>
@@ -28,9 +32,10 @@
         <li>git log --author="user_name"</li>
         <li>git log --since=1.month.out</li>
     </ul>
-    
-<p> comando para restaurar o arquivo pelo HASH (cód de 7 digitos): git restore --source=<HASH>
-    <Caminho do arquivo> exemplo git rstore --source=c7b8a90 deletando.html </p>
+
+    <p> comando para restaurar o arquivo pelo HASH (cód de 7 digitos): git restore --source=<HASH>
+            <Caminho do arquivo> exemplo git rstore --source=c7b8a90 deletando.html </p>
 
 </body>
+
 </html>
