--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="conteiner">
-        <img src="img/WIN_20250701_09_46_58_Pro.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
+        <img src="foto.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
         <p>eu sou técnico de sistemas Cauã</p>
         <h1>eu estudo programação front-end e mobile</h1>
         <p>sigo em busca de conhecer melhor essa area de desenvolvedor de sistemas e me desenvolvo no
