--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="conteiner">
-        <img src="foto.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
+        <img src="img/foto.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
         <p>eu sou técnico de sistemas Cauã</p>
         <h1>eu estudo programação front-end e mobile</h1>
         <p>sigo em busca de conhecer melhor essa area de desenvolvedor de sistemas e me desenvolvo no
@@ -32,7 +32,21 @@
             <a href="doc/Certificado - Alura -  html e css parte 4.pdf" target="_blank">
                 <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
             </a>
+ <a class="habilidades" href="Unidade JavaScript_ programando na linguagem da web - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">JavaScript: programando na linguagem da web</p>
+            </a>
+        </div>
 
+        <div>
+            <a class="habilidades" href="Unidade UX_ entenda a experiência de usuário - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">UX: conceitos iniciais</p>
+            </a>
+            <a class="habilidades" href="Unidade JavaScript_ explorando a linguagem - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">UX Strategy: divergindo ideias</p>
+            </a>
+            <a class="habilidades" href="Unidade React Native_Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">Reactive Native: criando um app</p>
+            </a>
 
         </div>
     </header>
