--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
                 </div>
             </div>
         </div>
+
+   <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/tec.png" alt="Foto da página inicial do salao TEC">
+                    <div class="card-body">
+                        <h5 class="card-title">Replicando uma pagina em HTML e CSS - salao TEC</h5>
+                        <p class="card-text">
+                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS. Foi criado um website com o tema CABELELEIRO, onde temos um menu que acessa a página de produtos e contato. 
+                        </p>
+                        <a href="https://cabelereiro-opal.vercel.app/" class="btn btn-primary">Acesse a página</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer class="conteiner py-5">
 <h2>Entre em contato</h2>
