--- a/index.html
+++ b/index.html
@@ -87,7 +87,22 @@
                     </div>
                 </div>
             </div>
-        </div>
+        <div class="col-md-4">
+                    <div class="card shadow-sm">
+                        <img src="img/nutricionista.png" class="card-img-top" alt="Página Nutricionista">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Projeto — Aparecida Nutricionista</h5>
+                            <p class="card-text">
+                                o projeto conta com menu funcional, página de serviços nutricionais, área com informações
+                                profissionais e página de contato para atendimento personalizado                               
+                            </p>
+                            <a href="https://introducao-javascript-brown.vercel.app/"
+                                class="btn btn-primary w-100" target="_blank">Acessar página</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
     </main>
     <footer class="conteiner py-5">
