--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="conteiner">
+    <header class="conteiner" text-center" id="body">
         <img src="img/foto.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
         <p>eu sou técnico de sistemas Cauã</p>
         <h1>eu estudo programação front-end e mobile</h1>
