--- a/index.html
+++ b/index.html
@@ -105,16 +105,12 @@
             </div>
 
     </main>
-    <footer class="conteiner py-5">
-<h2>Entre em contato</h2>
-<div>
-     <a href="https://github.dev/cauasakaue">github</a>
-</div>
-<p class="my-5 text-center">&copy;copyright 2025.
-    produzido por Cauã Yuri Sakaue
-</p>
-
-
+   <footer class="container py-5" id="rodape">
+        <h2>Entre em contato</h2>
+        <div>
+            <a id="ancora" href="https://github.dev/cauasakaue">GitHub</a>
+        </div>
+        <p class="my-5 text-center"> &copy; Copyright 2025. produzido por Cauã Yuri Sakaue</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
