--- a/index.html
+++ b/index.html
@@ -4,118 +4,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-
     <link rel="stylesheet" href="style.css">
-    <title>portifolio</title>
+
+    <title>Portfólio</title>
 </head>
 
 <body>
-    <header class="conteiner" text-center" id="body">
-        <img src="img/foto.jpg" alt="avatar do Cauã" srcset"" class="rounded-circle">
-        <p>eu sou técnico de sistemas Cauã</p>
-        <h1>eu estudo programação front-end e mobile</h1>
-        <p>sigo em busca de conhecer melhor essa area de desenvolvedor de sistemas e me desenvolvo no
-            ensino medio do Gabriel de Lara para oportunidades de trabalhos futuros</p>
-        <p>minhas habilidades</p>
+    <header class="container text-center" id="body">
+        <img src="img/foto.jpg" alt="avatar do Cauã" srcset="" width="200" height="200" class="rounded-circle">
+        <p class="lead">Eu sou Cauã</p>
+        <h1>Sou estudante tecnico em desenvolvimento de sistemas</h1>
+        <p> Sou estudante de nível medio do Colégio Gabriel de Lara, e estou cursando o curso Tecnico em Desenvolvimento
+            de Sistemas</p>
+        <p>Minhas habilidades</p>
+
         <div>
-            <a href="doc/Certificado - Alura - html e css parte 1.pdf" target="_blank"></a>
-
-            <p class="badge bg-secondary">Página web: HTML e CSS</p>
-            <a href="doc/Certificado - Alura -  html e css parte 2.pdf" target="_blank"></a>
-
-            <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
-            <a href="doc/Certificado - Alura -  html e css parte 3.pdf" target="_blank">
-
-            <a href="doc/Certificado - Alura -  html e css parte 4.pdf" target="_blank">
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 1_ crie uma página da Web - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">Página web: HTML e CSS</p>
+            </a>
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 2_ posicionamento, listas e navegação - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
+            </a>
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 3_ trabalhando com formulários e tabelas - Alura.pdf" target="_blank">
                 <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
             </a>
- <a class="habilidades" href="Unidade JavaScript_ programando na linguagem da web - Alura.pdf" target="_blank">
-                <p class="badge bg-secondary">JavaScript: programando na linguagem da web</p>
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 4_ avançando no CSS - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary"> HTML e CSS: avançando no CSS</p>
+            </a>
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade JavaScript_ programando na linguagem da web - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary">JavaScript: progamando na linguagem web</p>
             </a>
         </div>
 
         <div>
-            <a class="habilidades" href="Unidade UX_ entenda a experiência de usuário - Alura.pdf" target="_blank">
-                <p class="badge bg-secondary">UX: conceitos iniciais</p>
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade UX_ entenda a experiência de usuário - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary"> UX: conceitos iniciais</p>
             </a>
-            <a class="habilidades" href="Unidade JavaScript_ explorando a linguagem - Alura.pdf" target="_blank">
-                <p class="badge bg-secondary">UX Strategy: divergindo ideias</p>
+            <a class="habilidades" href="doc/UX Strategy_ divergindo e afunilando ideias - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary"> UX Strategy:divergindo ideias</p>
             </a>
-            <a class="habilidades" href="Unidade React Native_Alura.pdf" target="_blank">
-                <p class="badge bg-secondary">Reactive Native: criando um app</p>
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade React Native_ criando um app - Alura.pdf" target="_blank">
+                <p class="badge bg-secondary"> ReactNative:criando um app</p>
             </a>
-
         </div>
-    </header>
 
+    </header>
     <main class="container">
-         <div class="col-md-4">
-            
-         </div>
         <h2>Meus projetos</h2>
         <div class="row">
 
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/barbeariaalura.jpg" alt="Foto da página inicial da Barbearia Alura">
+                    <img src="img/barbeariaalura.jpg" alt="Foto da página inicialda Barbearia Alura">
                     <div class="card-body">
-                        <h5 class="card-title">Desenvolvendo uma pagina em HTML e CSS - BARBEARIA ALURA</h5>
-                        <p class="card-text">
-                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS.
-                            Foi criada um website com o tema Barbearia Alura, onde temos um menu que acessa a página de
-                            produtos e contato.
+                        <h5 class="card-title">Desenvolvendo uma pagina em HTML e CSS - Barbearia Alura</h5>
+                        <p class="card-text"> Página criada para desenvolver habilidades em programação Front-end,
+                            utilizando HTML e CSS. Foi criado um website com o tema Barbearia Alura, onde temos um menu
+                            que
+                            acessa a página de produtos e contato.
                         </p>
                         <a href="https://cauasakaue.github.io/barbearia-alura/" class="btn btn-primary">Acesse a
                             página</a>
                     </div>
                 </div>
             </div>
-        </div>
 
-   <div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
                     <img src="img/tec.png" alt="Foto da página inicial do salao TEC">
                     <div class="card-body">
-                        <h5 class="card-title">Replicando uma pagina em HTML e CSS - salao TEC</h5>
-                        <p class="card-text">
-                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS. Foi criado um website com o tema CABELELEIRO, onde temos um menu que acessa a página de produtos e contato. 
+                        <h5 class="card-title">Desenvolvendo uma pagina em HTML e CSS - salao TEC</h5>
+                        <p class="card-text"> Página criada para desenvolver habilidades em programação Front-End,
+                            utilizando HTML e CSS. Foi criado um website com o tema CABELELEIRO, onde temos um menu que
+                            acessa a página de produtos e contato.
                         </p>
-                        <a href="https://cabelereiro-opal.vercel.app/" class="btn btn-primary">Acesse a página</a>
+                        <a href="https://cabelereiro-opal.vercel.app/" class="btn btn-primary">Acesse a
+                            página</a>
                     </div>
                 </div>
-            </div>
-        <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img src="img/nutricionista.png" class="card-img-top" alt="Página Nutricionista">
 
-                        <div class="card-body">
-                            <h5 class="card-title">Projeto — Aparecida Nutricionista</h5>
-                            <p class="card-text">
-                                o projeto conta com menu funcional, página de serviços nutricionais, área com informações
-                                profissionais e página de contato para atendimento personalizado                               
-                            </p>
-                            <a href="https://introducao-javascript-brown.vercel.app/"
-                                class="btn btn-primary w-100" target="_blank">Acessar página</a>
-                        </div>
-                    </div>
-                </div>
             </div>
-
+        </div>
     </main>
-   <footer class="container py-5" id="rodape">
+
+    <footer class="container py-5" id="rodape">
         <h2>Entre em contato</h2>
         <div>
-            <a id="ancora" href="https://github.dev/cauasakaue">GitHub</a>
+            <a href="https://github.dev/MiguelAugusto02" id="ancora">GitHub</a>
         </div>
-        <p class="my-5 text-center"> &copy; Copyright 2025. produzido por Cauã Yuri Sakaue</p>
+        <p class="my-5 text-center"> &copy; Copyright 2025. Produzido por produzido por Cauã Yuri Sakaue</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 
 </body>
 
