--- a/index.html
+++ b/index.html
@@ -21,31 +21,43 @@
         <p>Minhas habilidades</p>
 
         <div>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 1_ crie uma página da Web - Alura.pdf" target="_blank">
+            <a class="habilidades"
+                href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 1_ crie uma página da Web - Alura.pdf"
+                target="_blank">
                 <p class="badge bg-secondary">Página web: HTML e CSS</p>
             </a>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 2_ posicionamento, listas e navegação - Alura.pdf" target="_blank">
+            <a class="habilidades"
+                href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 2_ posicionamento, listas e navegação - Alura.pdf"
+                target="_blank">
                 <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
             </a>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 3_ trabalhando com formulários e tabelas - Alura.pdf" target="_blank">
+            <a class="habilidades"
+                href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 3_ trabalhando com formulários e tabelas - Alura.pdf"
+                target="_blank">
                 <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
             </a>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 4_ avançando no CSS - Alura.pdf" target="_blank">
+            <a class="habilidades"
+                href="doc/CAUÃ YURI SAKAUE - Unidade HTML5 e CSS3 parte 4_ avançando no CSS - Alura.pdf"
+                target="_blank">
                 <p class="badge bg-secondary"> HTML e CSS: avançando no CSS</p>
             </a>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade JavaScript_ programando na linguagem da web - Alura.pdf" target="_blank">
+            <a class="habilidades"
+                href="doc/CAUÃ YURI SAKAUE - Unidade JavaScript_ programando na linguagem da web - Alura.pdf"
+                target="_blank">
                 <p class="badge bg-secondary">JavaScript: progamando na linguagem web</p>
             </a>
         </div>
 
         <div>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade UX_ entenda a experiência de usuário - Alura.pdf" target="_blank">
+            <a class="habilidades"
+                href="doc/CAUÃ YURI SAKAUE - Unidade UX_ entenda a experiência de usuário - Alura.pdf" target="_blank">
                 <p class="badge bg-secondary"> UX: conceitos iniciais</p>
             </a>
             <a class="habilidades" href="doc/UX Strategy_ divergindo e afunilando ideias - Alura.pdf" target="_blank">
                 <p class="badge bg-secondary"> UX Strategy:divergindo ideias</p>
             </a>
-            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade React Native_ criando um app - Alura.pdf" target="_blank">
+            <a class="habilidades" href="doc/CAUÃ YURI SAKAUE - Unidade React Native_ criando um app - Alura.pdf"
+                target="_blank">
                 <p class="badge bg-secondary"> ReactNative:criando um app</p>
             </a>
         </div>
@@ -87,6 +99,26 @@
 
             </div>
         </div>
+
+ <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/nutrição.png" alt="Foto da página inicial da nutrição">
+                    <div class="card-body">
+                        <h5 class="card-title">JavaScript Aparecida Nutrição</h5>
+                        <p class="card-text">
+                            Página criada para desenvolver habilidades em programação JavaScript.
+                            Foi criado um website com o tema Nutrição, onde temos um menu que acessa a página de produtos
+                            e contato.
+                        </p>
+                        <a href="https://introducao-javascript-brown.vercel.app/ class="btn btn-primary">Acesse a
+                            página</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
     </main>
 
     <footer class="container py-5" id="rodape">
