--- a/index.html
+++ b/index.html
@@ -98,11 +98,10 @@
                 </div>
 
             </div>
-        </div>
 
  <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/nutrição.png" alt="Foto da página inicial da nutrição">
+                    <img src="img/nutricionista.png" alt="Foto da página inicial da nutrição">
                     <div class="card-body">
                         <h5 class="card-title">JavaScript Aparecida Nutrição</h5>
                         <p class="card-text">
@@ -115,9 +114,8 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
+
 
     </main>
 
